[workspace]
members = [
  "day/01/FuelCounterUpper",
  "day/02/intcode",
  "day/03/WireCross",
  "day/04/SecureContainer",
  "day/05/intcode2",
  "day/06/OrbitMap",
  "day/07/intcode3",
  "day/07/ThrustCalc",
  
  "day/08/ImageDecode",
  
  "day/09/SensorBoost",
  "day/10/MonitoringStation",
  "day/11/SpacePolice",
  "day/12/NBody",
  "day/13/CarePackage",
  "day/14/Stoichiometry",
  "lib/intcode",
]

